--- a/mediaqueries_exercises/exercise_1/main.css
+++ b/mediaqueries_exercises/exercise_1/main.css
@@ -12,3 +12,33 @@ main {
 li {
     margin-bottom: 5px;
 }
+
+@media only screen and (max-width: 375px) {
+    body {
+        border: 10px solid red;
+    } 
+}
+
+@media only screen and (max-width: 425px) and (min-width: 376px) {
+    body {
+        border: 10px solid blue;
+    }
+}
+
+@media only screen and (max-width: 768px) and (min-width: 426px) {
+    body {
+        border: solid 10px green;
+    }
+}
+
+@media only screen and (max-width: 1024px) and (min-width: 769px) {
+    body {
+        border: solid 10px yellow;
+    }
+}
+
+@media only screen and (max-width: 1440px) and (min-width: 1025px) {
+    body {
+        border: solid 10px hotpink;
+    }
+}
