--- a/flexbox_execises/challenges_p1/flexbox_challenges/02/main.css
+++ b/flexbox_execises/challenges_p1/flexbox_challenges/02/main.css
@@ -2,6 +2,11 @@
 Reverse the order of the divs. */
 
 
+body {
+    display: flex;
+    flex-flow: row-reverse;
+}
+
 div {
     height: 100px;
     width: 150px;
