--- a/flexbox_execises/challenges_p1/flexbox_challenges/04/main.css
+++ b/flexbox_execises/challenges_p1/flexbox_challenges/04/main.css
@@ -2,6 +2,13 @@
  Set a reverse order. 
  Align items in the center of the page. */
 
+body {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+
 div {
     height: 100px;
     width: 150px; 
