--- a/flexbox_execises/challenges_p1/flexbox_challenges/08/main.css
+++ b/flexbox_execises/challenges_p1/flexbox_challenges/08/main.css
@@ -2,9 +2,11 @@
 
 body {
     display: flex; 
-    flex-flow: column;
+    flex-flow: column-reverse wrap;
     align-items: flex-end;
     border: 5px solid red;
+    height: 80vh;
+    
 }
 
 div {
@@ -14,4 +16,9 @@ div {
     margin: 1em;
     border: 2px solid red;
     text-align: center;
+    flex-grow: 1;
+}
+
+#one {
+    flex-basis: 100%;
 }
