--- a/flexbox_execises/challenges_p1/flexbox_challenges/01/main.css
+++ b/flexbox_execises/challenges_p1/flexbox_challenges/01/main.css
@@ -2,6 +2,14 @@
 Use wrap so that the divs appear on multiple lines. 
 Center the rows in the container*/
 
+body {
+    height: 100vh;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
 div {
     height: 100px;
     width: 200px; 
@@ -9,4 +17,6 @@ div {
     margin: 1em;
     border: 2px solid red;
     text-align: center;
+
 }
+
