--- a/flexbox_execises/challenges_p1/flexbox_challenges/05/main.css
+++ b/flexbox_execises/challenges_p1/flexbox_challenges/05/main.css
@@ -1,8 +1,12 @@
 /* Use flexbox to display all divs in a row at the bottom of the container. 
 Display divs on one line. */
 
+
+
 body {
     height: 800px;
+    display: flex;
+    align-items: flex-end;
 }
 
 div {
