--- a/flexbox_execises/challenges_p1/flexbox_challenges/06/main.css
+++ b/flexbox_execises/challenges_p1/flexbox_challenges/06/main.css
@@ -1,5 +1,11 @@
 /* Use flexbox to display the divs on one row in the center of the container */
 
+body {
+    height: 100vh;
+    display: flex; 
+    align-items: center;
+}
+
 div {
     height: 100px;
     width: 150px; 
