--- a/flexbox_execises/challenges_p1/flexbox_challenges/07/main.css
+++ b/flexbox_execises/challenges_p1/flexbox_challenges/07/main.css
@@ -1,6 +1,12 @@
 /* Use flexbox to display the divs in a row. 
 When resizing the page, the divs on the last row should take up all available space */
 
+body {
+    display: flex;
+    flex-flow: row wrap;
+    
+}
+
 
 div {
     height: 100px;
@@ -9,4 +15,5 @@ div {
     margin: 1em;
     border: 2px solid red;
     text-align: center;
+    flex-grow: 1;
 }
