--- a/gridlayout_exercises/exercise_3/main.css
+++ b/gridlayout_exercises/exercise_3/main.css
@@ -15,3 +15,61 @@ div {
     background-color: orange;
 }
 
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(10, 20vh);
+    grid-gap: 2vh 1vw;
+
+}
+
+.three {
+    grid-column: 3 / 5;
+}
+
+.four {
+    grid-column: 1 / 2;
+    grid-row: 2 / 5;
+}
+
+.five {
+    grid-column: 2 / 3;
+    grid-row: 2 / 4;    
+}
+
+.six {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+.seven {
+    grid-column: 3 / -1;
+    grid-row: 2 / 4;
+    
+}
+
+.eight {
+    grid-column: 3 / 4;
+    grid-row: 4 / 5;
+    
+}
+
+.nine {
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;
+}
+
+.ten {
+    grid-column: 1 / 2;
+    grid-row: 5 / 6;
+}
+
+.eleven {
+    grid-column: 2 / 3;
+    grid-row: 5 / 6;
+}
+
+.twelve {
+    grid-column: 1 / -1;
+    grid-row: 6 / 7;    
+}
