--- a/scss_exercises/nesting_exercises_d2/nesting_exercise1/style.css
+++ b/scss_exercises/nesting_exercises_d2/nesting_exercise1/style.css
@@ -1,116 +1,78 @@
 * {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+  margin: 0;
+  border: 0;
+  padding: 0;
+  box-sizing: border-box; }
 
 header {
-    height: 10rem; 
-    width: 100%;
-    background-color: rgba(0, 0, 255, 0.356);
-    text-align: center;
-    padding-top: 3.25rem; 
-}
-
-h1 {
+  height: 10rem;
+  width: 100%;
+  background-color: rgba(0, 0, 255, 0.356);
+  text-align: center;
+  padding-top: 3.25rem; }
+  header h1 {
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
-}
+    color: black; }
 
 nav {
-    border-bottom: .1rem solid rgba(128, 128, 128, 0.808);
-}
+  border-bottom: 0.1rem solid rgba(128, 128, 128, 0.808); }
 
 ul {
-    display: flex;
-    justify-content: center;
-}
-
-li {
+  display: flex;
+  justify-content: center; }
+  ul li {
     list-style: none;
-    padding: 1rem;
-}
-
-a {
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
-}
-
-a:link {
-    color: grey;
-}
-
-a:visited {
-    color: rgba(128, 0, 128, 0.877);
-}
-
-a:hover {
-    transform: scale(1.1);
-}
+    padding: 1rem; }
+    ul li a {
+      text-decoration: none;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 1rem; }
+    ul li a:link {
+      color: grey; }
+    ul li a:visited {
+      color: rgba(128, 0, 128, 0.877); }
+    ul li a:hover {
+      transform: scale(1.1); }
 
 main {
-    padding: 2rem;
-    flex-flow: column nowrap;
-}
-
-.main-text, aside {
-    width: 100%;
-}
-
-aside {
-    border: .1rem solid rgba(128, 128, 128, 0.808);
-    padding: .5rem;
-}
-
-
-h2 {
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 1rem;
-}
-
-p {
-    margin: 0.5rem;
-}
+  padding: 2rem;
+  flex-flow: column nowrap; }
+  main .main-text, main aside {
+    width: 100%; }
+    main .main-text h2, main aside h2 {
+      font-family: Arial, Helvetica, sans-serif;
+      margin-bottom: 1rem; }
+    main .main-text p, main aside p {
+      margin: 0.5rem; }
+  @media screen and (min-width: 800px) {
+    main .main-text {
+      width: 60%; } }
+  main aside {
+    border: 0.1rem solid rgba(128, 128, 128, 0.808);
+    padding: .5rem; }
+    @media screen and (min-width: 800px) {
+      main aside {
+        width: 30%; } }
+  @media screen and (min-width: 800px) {
+    main {
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center; } }
 
 section {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-}
-
-img {
-    border: .1rem solid rgba(128, 128, 128, 0.808);
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center; }
+  section img {
+    border: 0.1rem solid rgba(128, 128, 128, 0.808);
     margin: 1rem;
-    height: 20rem;
-}
+    height: 20rem; }
+  @media screen and (min-width: 800px) {
+    section {
+      flex-flow: row wrap; } }
 
 footer {
-    padding: .5rem;
-    background-color: rgba(128, 128, 128, 0.288);
-    margin-top: 1rem;
-    border-top: .1rem solid rgba(128, 128, 128, 0.808);
-}
-
-@media screen and (min-width: 800px) {
-    main {
-        display: flex; 
-        flex-flow: row wrap;
-        justify-content: center;
-    }
-    
-    
-    .main-text {
-        width: 60%;
-    }
-    
-    aside {
-        width: 30%;       
-    }
-
-    section {
-        flex-flow: row wrap; 
-    }
-    
-}
+  padding: .5rem;
+  background-color: rgba(128, 128, 128, 0.288);
+  margin-top: 1rem;
+  border-top: 0.1rem solid rgba(128, 128, 128, 0.808); }
