--- a/scss_exercises/nesting_exercises_d2/nesting_exercise2/style.css
+++ b/scss_exercises/nesting_exercises_d2/nesting_exercise2/style.css
@@ -1,162 +1,114 @@
 * {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    box-sizing: border-box;
-}
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box; }
 
-nav > ul {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 4rem;
-}
+nav ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 4rem; }
+  nav ul li a {
+    color: #0e749e; }
+  @media screen and (min-width: 768px) {
+    nav ul {
+      justify-content: flex-end; } }
 
 li {
-    list-style: none;
-    padding: 1rem;
-}
-
-nav a {
-    color: #0e749e;
-}
+  list-style: none;
+  padding: 1rem; }
 
 a {
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
 
 header {
-    height: 20rem;
-    background-image: url(images_website/header.jpg);
-    background-size: cover;
-    text-align: center;
-    padding: 2rem;
-    margin-bottom: 1rem;
-}
-
-header > h1 {
+  height: 20rem;
+  background-image: url(images_website/header.jpg);
+  background-size: cover;
+  text-align: center;
+  padding: 2rem;
+  margin-bottom: 1rem; }
+  header h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 2rem;
-}
+    font-size: 2rem; }
 
+.cards, .card {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center; }
 
-.img-mountain {
-    background-image: url(images_website/mountain.jpg);
-}
+@media screen and (min-width: 1024px) {
+  .cards {
+    flex-flow: row wrap;
+    justify-content: center; } }
 
-.img-surfer {
-    background-image: url(images_website/surfer.jpg);
-}
-
-.img-tree {
-    background-image: url(images_website/tree.jpg);
-}
-
-
-.img {
+.card {
+  padding: 1rem;
+  background-color: #e0ddb2;
+  margin: 1rem;
+  border: 2px solid #dad6ab;
+  border-radius: 5px; }
+  .card .img-mountain {
+    background-image: url(images_website/mountain.jpg); }
+  .card .img-surfer {
+    background-image: url(images_website/surfer.jpg); }
+  .card .img-tree {
+    background-image: url(images_website/tree.jpg); }
+  .card .img {
     background-size: cover;
     height: 10rem;
     width: 100%;
-    background-position: center;
-
-}
-.cards, .card {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: center; 
-}
-
-.card {
-    padding: 1rem;
-    background-color: #e0ddb2;
-    margin: 1rem;
-    border: 2px solid #dad6ab;
-    border-radius: 5px;
-}
-
-.card-text {
+    background-position: center; }
+    @media screen and (min-width: 1024px) {
+      .card .img {
+        width: 40%; } }
+  .card .card-text {
     padding-top: 1rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
+    @media screen and (min-width: 768px) {
+      .card .card-text {
+        padding: 0 1rem 1rem 1rem; } }
+    @media screen and (min-width: 1024px) {
+      .card .card-text {
+        width: 60%; } }
+  @media screen and (min-width: 768px) {
+    .card {
+      flex-flow: row nowrap;
+      align-items: flex-start;
+      width: 80%;
+      margin: 0.5rem; } }
+  @media screen and (min-width: 1024px) {
+    .card {
+      width: 45%; } }
 
 main {
-    display: flex; 
-    flex-flow: column;
-    justify-content: center;
-    margin: 1rem;
-}
-
-aside, article {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  margin: 1rem; }
+  main aside, main article {
     padding: 1rem;
     font-size: 1rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-aside {
-    border: 2px solid #dad6ab;
-}
-
-footer  > ul {
-display: flex;
-justify-content: center;
-height: 4rem;
-background-color: #016690;
-}
-
-
-footer a {
-    color: #fff;
-}
-/* @media screen and (min-width: 500px) {
-  
-} */
-
-@media screen and (min-width: 768px) {
-    .card {
-        flex-flow: row nowrap;
-        align-items: flex-start;
-        width: 80%;
-        margin: 0.5rem;
-    }
-
-    .card-text {
-        padding: 0 1rem 1rem 1rem;
-    }
-
-    nav > ul {
-        justify-content: flex-end;
-    }
-
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; }
+  @media screen and (min-width: 768px) {
+    main article {
+      width: 50%; } }
+  main aside {
+    border: 2px solid #dad6ab; }
+    @media screen and (min-width: 768px) {
+      main aside {
+        width: 25%; } }
+  @media screen and (min-width: 768px) {
     main {
-        flex-flow: row nowrap;
-    }
+      flex-flow: row nowrap; } }
 
-    article {
-        width: 50%;
-    }
-
-    aside {
-        width: 25%;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .cards {
-        flex-flow: row wrap;
-        justify-content: center;
-    }
-
-    .card {
-        width: 45%;
-    }
-
-    .img {
-        width: 40%;
-    }
-   
-    .card-text {
-        width: 60%;
-    }
-}
+footer ul {
+  display: flex;
+  justify-content: center;
+  height: 4rem;
+  background-color: #016690; }
+  footer ul li a {
+    color: #fff; }
