--- a/scss_exercises/variables_exercises_d1/variables_exercise1/style.css
+++ b/scss_exercises/variables_exercises_d1/variables_exercise1/style.css
@@ -4,7 +4,7 @@ html, body {
     padding: 0;
     box-sizing: border-box;
 }
-
+/* Very big, first color, first font */
 header {
     height: 10rem; 
     background-color: rgba(255, 255, 0, 0.39);
@@ -13,46 +13,52 @@ header {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* first font */
 h1 {
     font-family: Arial, Helvetica, sans-serif;
 }
+
 
 main {
     margin: .5rem; 
 }
 
+/* very big, second font, second color */
 .huge {
     font-family: 'Times New Roman', Times, serif;
     font-size: 10rem;
     color: blue;
 }
 
-
+/* big, second font, second color */
 .big {
     font-family: 'Times New Roman', Times, serif;
     font-size: 8rem;
     color: blue;
 }
 
+/* normal, third font, third color */
 .medium {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
     font-size: 3rem;
     color: purple;
 }
 
+/* normal, fourth font, third color */
 .middle {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 3rem;
     color: purple;
 }
 
-
+/* small, fifth font, fourth color; */
 .small {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 2rem;
     color: green;
 }
 
+/* tiny, fifth font, fourth color */
 .tiny {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: .5rem;
@@ -60,6 +66,7 @@ main {
     margin-bottom: 2rem;
 }
 
+/* first color, first font */
 footer {
     height: 10rem;
     background-color: rgba(255, 255, 0, 0.39);
